# Nullthread

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/issue-bodies/: 01-readme-cli.md  02-fixtures.md  03-cli-output.md  04-output-validation.md  05-cfg-branches.md  06-json-schema-version.md  07-passes-all.md  08-loc-mapping.md  09-race-symbolic.md  10-coalescing-model.md  11-barrier-divergence-cfg.md  12-action-pr-analyze.md
.github/workflows/: ci.yml
docs/: architecture.md
src/nullthread/: __init__.py  analyze.py  cli.py  models.py
src/nullthread/ai/: __init__.py  anthropic_backend.py  cache.py  config.py  diagnose.py  prompts.py  templates.py
src/nullthread/cfg/: __init__.py  builder.py  graph.py
src/nullthread/parser/: __init__.py  ptx.py
src/nullthread/passes/: __init__.py  barrier.py  base.py  coalescing.py  divergence.py  occupancy.py  race.py  registry.py
src/nullthread/report/: __init__.py  cli.py  html.py  json.py
src/nullthread/report/templates/: report.html
tests/: test_report_json_schema.py  test_smoke_matmul.py
tests/kernels/: matmul.ptx
