[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nullthread"
version = "0.2.0"
description = "Static analysis for GPU kernels — correctness and performance without a GPU"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Nullthread contributors" }]
keywords = ["cuda", "ptx", "gpu", "static-analysis", "kernel"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "typer>=0.12.0",
  "jinja2>=3.1.0",
  "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]
anthropic = [
  "httpx>=0.27.0",
]

[project.scripts]
nullthread = "nullthread.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nullthread"]

[tool.hatch.build.targets.sdist]
include = ["src/nullthread", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/nullthread/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
extraPaths = ["src"]
